@@ -1,3 +1,12 @@
+2008-05-20  kitone  <kitone@gna.org>
+
+	* src/utility.cc:
+	Display an error message if check_registry failed.
+
+	* src/vp/GStreamerPlayer.cc:
+	* src/we/WaveformGenerator.cc:
+	Better error message when an gstreamer element is missing.
+
 2008-05-18  kitone  <kitone@gna.org>
 
 	* src/Makefile.am:
